AlignmentMatrixControl: fixup style names and nesting (#73757)
* AlignmentMatrixControl: fixup style names and nesting

* Remove unneeded comments

* Changelog entry

--- a/packages/components/src/alignment-matrix-control/style.module.scss
+++ b/packages/components/src/alignment-matrix-control/style.module.scss
@@ -1,8 +1,7 @@
 @use "@wordpress/base-styles/variables" as *;
 @use "../utils/theme-variables" as *;
 
-/* Grid structure */
-.gridContainer {
+.grid-container {
 	direction: ltr;
 
 	display: grid;
@@ -19,7 +18,7 @@
 	cursor: pointer;
 }
 
-.gridRow {
+.grid-row {
 	grid-column: 1 / -1;
 
 	box-sizing: border-box;
@@ -27,7 +26,6 @@
 	grid-template-columns: repeat(3, 1fr);
 }
 
-/* Cell */
 .cell {
 	position: relative;
 
@@ -44,7 +42,6 @@
 	outline: none;
 }
 
-/* Point */
 .point {
 	display: block;
 	contain: strict;
@@ -60,27 +57,25 @@
 	/* Use border instead of background color so that the point shows
 	in Windows High Contrast Mode */
 	border: 3px solid currentColor;
-}
 
-/* Highlight active item */
-.cell[data-active-item] .point {
-	color: $components-color-foreground;
-	transform: scale(calc(5 / 3));
-}
+	/* Highlight active item */
+	.cell[data-active-item] & {
+		color: $components-color-foreground;
+		transform: scale(calc(5 / 3));
+	}
 
-/* Hover styles for non-active items */
-.cell:not([data-active-item]):hover .point {
-	color: $components-color-accent;
-}
+	/* Hover styles for non-active items */
+	.cell:not([data-active-item]):hover & {
+		color: $components-color-accent;
+	}
 
-/* Show an outline only when interacting with keyboard */
-.cell[data-focus-visible] .point {
-	outline: 1px solid $components-color-accent;
-	outline-offset: 1px;
-}
+	/* Show an outline only when interacting with keyboard */
+	.cell[data-focus-visible] & {
+		outline: 1px solid $components-color-accent;
+		outline-offset: 1px;
+	}
 
-@media not (prefers-reduced-motion) {
-	.point {
+	@media not (prefers-reduced-motion) {
 		transition-property: color, transform;
 		transition-duration: 120ms;
 		transition-timing-function: linear;
